# tokpisin-models

./: .gitignore  README.md  pyproject.toml
scripts/: transcribe_tok_pisin.py  translate_tok_pisin.py
