[project]
name = "tokpisin-models"
version = "0.1.0"
description = "Demo inference scripts for Tok Pisin translation (NLLB-200-3.3B) and transcription (OmniASR-CTC-3B)."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "python-dotenv>=1.0",
    # Translation: NLLB-200-3.3B via HF Transformers.
    "transformers>=4.56,<5",
    "sentencepiece>=0.2",
    "accelerate>=1.0",
    # Transcription: OmniASR-CTC-3B via Meta's omnilingual-asr (fairseq2).
    "omnilingual-asr>=0.2.0",
    "soundfile>=0.13",
    # Pinned to match the fairseq2n CUDA wheel below. See README "GPU stack".
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "fairseq2[arrow]==0.6.0",
    "fairseq2n==0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokpisin_demo"]

# --- GPU stack ---------------------------------------------------------------
# omnilingual-asr 0.2.0 caps fairseq2 at <=0.6.0, whose native lib fairseq2n is
# built against torch 2.8.0 / CUDA 12.6 and is served only from Meta's variant
# index (not PyPI). torch is pulled from the matching PyTorch cu126 index. The
# cu126 wheels run on this node's CUDA 12.4 driver via minor-version compat.
# To retarget a different torch/CUDA, change torch's version and both index URLs
# together (see https://github.com/facebookresearch/fairseq2 install matrix).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "fairseq2"
url = "https://fair.pkg.atmeta.com/fairseq2/whl/pt2.8.0/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
fairseq2n = { index = "fairseq2" }
